Comment out demo keybinds for now
[CL 2825162 by Peter Knepley in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultInput.ini
+++ b/UnrealTournament/Config/DefaultInput.ini
@@ -155,13 +155,13 @@ bUseMouseForTouch=False
 +SpectatorBinds=(KeyName=Zero,Command="ViewPlayerNum 5 1")
 +SpectatorBinds=(KeyName=Add,Command="ToggleSlideOut")
 +SpectatorBinds=(KeyName=Enter,Command="ToggleShowBinds")
-+SpectatorBinds=(KeyName=F1,Command="DemoRestart")
-+SpectatorBinds=(KeyName=F2,Command="DemoSeek -5")
-+SpectatorBinds=(KeyName=F3,Command="DemoSeek 10")
-+SpectatorBinds=(KeyName=F4,Command="DemoGoToLive")
-+SpectatorBinds=(KeyName=F5,Command="DemoPause")
-+SpectatorBinds=(KeyName=F7,Command="DemoTimeDilation -.1")
-+SpectatorBinds=(KeyName=F8,Command="DemoTimeDilation .1")
+;+SpectatorBinds=(KeyName=F1,Command="DemoRestart")
+;+SpectatorBinds=(KeyName=F2,Command="DemoSeek -5")
+;+SpectatorBinds=(KeyName=F3,Command="DemoSeek 10")
+;+SpectatorBinds=(KeyName=F4,Command="DemoGoToLive")
+;+SpectatorBinds=(KeyName=F5,Command="DemoPause")
+;+SpectatorBinds=(KeyName=F7,Command="DemoTimeDilation -.1")
+;+SpectatorBinds=(KeyName=F8,Command="DemoTimeDilation .1")
 +SpectatorBinds=(KeyName=F12,Command="ToggleReplayWindow")
 +SpectatorBinds=(KeyName=P,Command="TogglePlayerInfo")
 
