Adjusted path build sizes for scale change
[CL 2825299 by Matt Oelfke in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultEngine.ini
+++ b/UnrealTournament/Config/DefaultEngine.ini
@@ -112,12 +112,13 @@ r.RHICmdBypass=1
 r.PostProcessAAQuality=4
 
 [/Script/Engine.RecastNavMesh]
-AgentRadius=42.f
+AgentRadius=46.f
 ; note: height is full height not half!
-AgentHeight=120.f
-AgentMaxHeight=184.f
+AgentHeight=138.f
+AgentMaxHeight=212.f
 AgentMaxStepHeight=51.f
 AgentMaxSlope=44.f
+CellSize=18.f
 
 [/Script/Engine.PhysicsSettings]
 DefaultTerminalVelocity=7000.0
@@ -185,7 +186,7 @@ BeaconNetDriverName=LobbyBeaconDriver
 [/Script/Engine.NavigationSystem]
 bInitialBuildingLocked=False
 bSkipAgentHeightCheckWhenPickingNavData=False
-+SupportedAgents=(Name="UT",Color=(B=0,G=255,R=140,A=164),DefaultQueryExtent=(X=50.000000,Y=50.000000,Z=250.000000),NavigationDataClassName=/Script/UnrealTournament.UTRecastNavMesh,AgentRadius=42.000000,AgentHeight=120.000000,AgentStepHeight=51.000000,bCanCrouch=False,bCanJump=False,bCanWalk=False,bCanSwim=False,bCanFly=False)
++SupportedAgents=(Name="UT",Color=(B=0,G=255,R=140,A=164),DefaultQueryExtent=(X=50.000000,Y=50.000000,Z=250.000000),NavigationDataClassName=/Script/UnrealTournament.UTRecastNavMesh,AgentRadius=46.000000,AgentHeight=138.000000,AgentStepHeight=51.000000,bCanCrouch=False,bCanJump=False,bCanWalk=False,bCanSwim=False,bCanFly=False)
 DirtyAreasUpdateFreq=60.000000
 !RequiredNavigationDataClassNames=Clear
 +RequiredNavigationDataClassNames=/Script/UnrealTournament.UTRecastNavMesh
