re-ordered game categories in match creation UI.
[CL 2829930 by Steve Polge in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultRules.ini
+++ b/UnrealTournament/Config/DefaultRules.ini
@@ -7,6 +7,10 @@
 ; These are the rulesets that are loaded by the game in both single player and allowed on the hubs.
 ; You can add new rulesets here then the definition of the ruleset goes below.  Follow the format described by the LGiCTF rule.
 
++AllowedRulesets=TEAMSHOWDOWN
++AllowedRulesets=CTF
++AllowedRulesets=BIGCTF
++AllowedRulesets=CompCTF
 +AllowedRulesets=Deathmatch
 +AllowedRulesets=BigDM
 +AllowedRulesets=TDM
@@ -20,7 +24,6 @@
 +AllowedRulesets=iCTF
 +AllowedRulesets=iCTF+t
 +AllowedRulesets=LGiCTF
-+AllowedRulesets=TEAMSHOWDOWN
 
 [LGiCTF UTGameRuleset]
 UniqueTag=LGiCTF
