UT-2422 - If a file is being transfered when a hub match starts, display the download window and stall the transfer until it's done. New bins for Test.
[CL 2835987 by Joe Wilcox in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultRules.ini
+++ b/UnrealTournament/Config/DefaultRules.ini
@@ -50,3 +50,4 @@ DefaultMap=/Game/RestrictedAssets/Maps/CTF-TitanPass
 +CustomMapList=/Game/RestrictedAssets/Maps/WIP/CTF-Mine
 +CustomMapList=/Game/RestrictedAssets/Maps/WIP/CTF-Quick
 +CustomMapList=/Game/RestrictedAssets/Maps/WIP/CTF-Plaza
++RequiredPackages=ctf-qa-WindowsNoEditor
