Changed bot speech config option to be 3 settings: all voice/text, status text only, none - allows disabling taunts while still allowing bots to tell players about powerup respawn timings and such
[CL 2855164 by Matt Oelfke in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultGameUserSettings.ini
+++ b/UnrealTournament/Config/DefaultGameUserSettings.ini
@@ -4,7 +4,7 @@ PlayerName=Player
 FullscreenMode=0
 AAMode=4
 ScreenPercentage=100
-bBotSpeechEnabled=true
+BotSpeech=BSO_All
 
 [ScalabilityGroups]
 sg.ResolutionQuality=100
