Suppressed more engine log message categories.
[CL 2856331 by Steve Polge in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultEngine.ini
+++ b/UnrealTournament/Config/DefaultEngine.ini
@@ -170,6 +170,11 @@ LogD3D11RHI=Warning
 LogHMD=Error
 LogTemp=Warning
 LogWorld=Warning
+LogProfileSys=Warning
+LogHttpReplay=Warning
+LogGameStats=Warning
+LogDemo=Warning
+LogAIModule=Warning
 
 [/Script/UnrealTournament.UTLocalPlayer]
 bNoMidGameMenu=false
