Separate hud widget scaling from hud message scaling.  Keep "you are on team" message up longer.
[CL 2862443 by Steve Polge in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -152,6 +152,7 @@ HUDWidgetSlateOpacity=0.5
 HUDWidgetBorderOpacity=1.0
 HUDWidgetWeaponbarInactiveOpacity=0.25
 HUDWidgetScaleOverride=0.7
+HUDMessageScaleOverride=1.0
 HUDWidgetWeaponBarScaleOverride=0.9
 HUDWidgetWeaponBarInactiveIconOpacity=0.25
 HUDWidgetWeaponBarEmptyOpacity=0.0
