--- a/UnrealTournament/Config/DefaultRules.ini
+++ b/UnrealTournament/Config/DefaultRules.ini
@@ -27,7 +27,7 @@
 
 [LGiCTF UTGameRuleset]
 UniqueTag=LGiCTF
-Title=Low-Grav-Insta CTF
+Title=Low-Grav IG CTF
 Tooltip=One hit one kill CTF with low gravity.
 Description=Capture the Flag with Instagib rifles in low gravity.\n\n<UT.Hub.RulesText_Small>Mutators : Instagib, Low Gravity</>\n<UT.Hub.RulesText_Small>TimeLimit : 2x 7 minute halfs</>\n<UT.Hub.RulesText_Small>Mercy Rule : On</>\n<UT.Hub.RulesText_Small>Maximum of 12 players allowed.</>
 MaxPlayers=16
