UT parties and matchmaking objects manually refactored from other game
[CL 2866634 by Peter Knepley in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultEngine.ini
+++ b/UnrealTournament/Config/DefaultEngine.ini
@@ -373,3 +373,20 @@ Local=(Type=FileSystem, ReadOnly=false, Clean=false, Flush=false, PurgeTransient
 Pak=(Type=ReadPak, Filename="%GAMEDIR%DerivedDataCache/DDC.ddp")
 Shared=
 AltShared=
+
+[/Script/OnlineSubsystemUtils.PartyBeaconHost]
+TravelSessionTimeoutSecs=90
+
+[/Script/OnlineSubsystemUtils.OnlineBeaconHost]
+BeaconConnectionInitialTimeout=48.0
+BeaconConnectionTimeout=49.0
+
+[/Script/UnrealTournament.UTPartyBeaconClient]
+BeaconConnectionInitialTimeout=10.0
+BeaconConnectionTimeout=51.0 // Using slightly different times to make it easier to diagnose from logs
+ReconnectionInitialTimeout=100.0
+ReconnectionTimeout=52.0
+
+[/Script/UnrealTournament.UTLobbyBeaconClient]
+BeaconConnectionInitialTimeout=50.0
+BeaconConnectionTimeout=45.0
