--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -92,6 +92,7 @@ InactivePlayerStateLifeSpan=1200
 +GameModeClassAliases=(ShortName="LOBBY",GameClassName="/Script/UnrealTournament.UTLobbyGameMode")
 +GameModeClassAliases=(ShortName="Sample",GameClassName="/SampleGameMode/BP_SampleGameMode.BP_SampleGameMode_C")
 +GameModeClassAliases=(ShortName="TimeDemo",GameClassName="/Game/RestrictedAssets/Blueprints/TimeDemoGameMode.TimeDemoGameMode_C")
++GameModeClassAliases=(ShortName="EMPTY",GameClassName="/Script/UnrealTournament.UTEmptyServerGameMode")
 
 [/Script/UnrealTournament.UTDuelGame]
 bLobbyAllowJoinInProgress=false
