Footsteps can now key off phys mats
[CL 2872925 by Peter Knepley in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultEngine.ini
+++ b/UnrealTournament/Config/DefaultEngine.ini
@@ -1,39 +1,39 @@
 [URL]
 GameName=UnrealTournament
 
-[PhysicalMaterial.SurfaceTypes]
-SurfaceType1=PhysMat_Dirt
-SurfaceType2=PhysMat_Metal
-SurfaceType3=PhysMat_Wood
-SurfaceType4=PhysMat_Stone
-SurfaceType5=PhysMat_Glass
-SurfaceType6=PhysMat_Water
-SurfaceType7=PhysMat_Slime
-SurfaceType8=PhysMat_Lava
-SurfaceType9=PhysMat_Energy
-SurfaceType10=PhysMat_Plastic
-SurfaceType11=PhysMat_Rubber
-SurfaceType12=PhysMat_Foliage
-SurfaceType13=PhysMat_Grass
-SurfaceType14=PhysMat_Flesh_Human
-SurfaceType15=PhysMat_Flesh_Robot
-SurfaceType16=PhysMat_Flesh_Necris
-SurfaceType17=PhysMat_Flesh_Skaarj
-SurfaceType18=PhysMat_Flesh_Krall
-SurfaceType19=PhysMat_Gib_Human
-SurfaceType20=PhysMat_Gib_Robot
-SurfaceType21=PhysMat_Gib_Necris
-SurfaceType22=PhysMat_Gib_Skaarj
-SurfaceType23=PhysMat_Gib_Krall
-SurfaceType24=PhysMat_Vehicle
-SurfaceType25=PhysMat_Snow
-SurfaceType26=PhysMat_Mud
-SurfaceType27=PhysMat_Nanoblack
-SurfaceType28=PhysMat_Oil
-SurfaceType29=PhysMat_Armor
-SurfaceType30=PhysMat_ShieldBelt
-SurfaceType31=PhysMat_Gravel
-SurfaceType32=PhysMat_BrokenGlass
+[/Script/Engine.PhysicsSettings]
++PhysicalSurfaces=(Type=SurfaceType1, Name=Dirt)
++PhysicalSurfaces=(Type=SurfaceType2, Name=Metal)
++PhysicalSurfaces=(Type=SurfaceType3, Name=Wood)
++PhysicalSurfaces=(Type=SurfaceType4, Name=Stone)
++PhysicalSurfaces=(Type=SurfaceType5, Name=Glass)
++PhysicalSurfaces=(Type=SurfaceType6, Name=Water)
++PhysicalSurfaces=(Type=SurfaceType7, Name=Slime)
++PhysicalSurfaces=(Type=SurfaceType8, Name=Lava)
++PhysicalSurfaces=(Type=SurfaceType9, Name=Energy)
++PhysicalSurfaces=(Type=SurfaceType10, Name=Plastic)
++PhysicalSurfaces=(Type=SurfaceType11, Name=Rubber)
++PhysicalSurfaces=(Type=SurfaceType12, Name=Grass)
++PhysicalSurfaces=(Type=SurfaceType13, Name=Flesh_Human)
++PhysicalSurfaces=(Type=SurfaceType14, Name=Flesh_Robot)
++PhysicalSurfaces=(Type=SurfaceType15, Name=Flesh_Necris)
++PhysicalSurfaces=(Type=SurfaceType16, Name=Flesh_Skaarj)
++PhysicalSurfaces=(Type=SurfaceType17, Name=Flesh_Krall)
++PhysicalSurfaces,(Type=SurfaceType18, Name=Flesh_Krall)
++PhysicalSurfaces=(Type=SurfaceType19, Name=Gib_Human)
++PhysicalSurfaces=(Type=SurfaceType20, Name=Gib_Robot)
++PhysicalSurfaces=(Type=SurfaceType21, Name=Gib_Necris)
++PhysicalSurfaces=(Type=SurfaceType22, Name=Gib_Skaarj)
++PhysicalSurfaces=(Type=SurfaceType23, Name=Gib_Krall)
++PhysicalSurfaces=(Type=SurfaceType24, Name=Vehicle)
++PhysicalSurfaces=(Type=SurfaceType25, Name=Snow)
++PhysicalSurfaces=(Type=SurfaceType26, Name=Mud)
++PhysicalSurfaces=(Type=SurfaceType27, Name=Nanoblack)
++PhysicalSurfaces=(Type=SurfaceType28, Name=Oil)
++PhysicalSurfaces=(Type=SurfaceType29, Name=Armor)
++PhysicalSurfaces=(Type=SurfaceType30, Name=ShieldBelt)
++PhysicalSurfaces=(Type=SurfaceType31, Name=Gravel)
++PhysicalSurfaces=(Type=SurfaceType32, Name=BrokenGlass)
 
 [/Script/Engine.Engine]
 TinyFontName=/Engine/EngineFonts/TinyFont.TinyFont
