--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -378,3 +378,6 @@ MenuMusicAssetName=/Game/RestrictedAssets/Audio/Music/Music_UTMenu_Classic.Music
 
 [/Script/Unrealtournament.UTChallengeManager]
 bTestDailyChallenges=false
+
+[/Script/UnrealTournament.UTPlaylistManager]
++Playlist=(PlaylistId=0,MaxTeamCount=2,MaxTeamSize=1,MaxPartySize=1,GameMode="TEAMSHOWDOWN",MapNames=("/Game/RestrictedAssets/Maps/WIP/DM-Chill"))
