UT-3047 - bans are now passwed to the instance so that you can't backdoor your way in
[CL 2879448 by Joe Wilcox in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultEngine.ini
+++ b/UnrealTournament/Config/DefaultEngine.ini
@@ -175,6 +175,7 @@ LogHttpReplay=Warning
 LogGameStats=Warning
 LogDemo=Warning
 LogAIModule=Warning
+UT=VeryVerbose
 
 [/Script/UnrealTournament.UTLocalPlayer]
 bNoMidGameMenu=false
