Chill_Vis to cook list for early testing in packaged build.
[CL 2881376 by Robert Estep in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultEditor.ini
+++ b/UnrealTournament/Config/DefaultEditor.ini
@@ -39,6 +39,7 @@ SimpleMapName=/Game/RestrictedAssets/Maps/Example_Map
 +Map=/Game/RestrictedAssets/Maps/WIP/DM-RGB
 +Map=/Game/RestrictedAssets/Maps/WIP/CTF-Plaza
 +Map=/Game/RestrictedAssets/Maps/WIP/Dm-Sand
++Map=/Game/RestrictedAssets/Maps/WIP/DM-Chill_Vis
 +Map=/Game/RestrictedAssets/Maps/RaceTrack
 +Map=/Game/RestrictedAssets/Tutorials/TUT-MovementTraining
 +Map=/Game/RestrictedAssets/Tutorials/TUT-WeaponTraining
