Changed Hub server restart timeout to 3 hours Changed RefreshTokenTheshold to 2 hours Added the additional DumpTime stats port command Updated DumpGame to include the time until the next server restart with hubs.
[CL 2881941 by Joe Wilcox in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultEngine.ini
+++ b/UnrealTournament/Config/DefaultEngine.ini
@@ -390,3 +390,7 @@ ReconnectionTimeout=52.0
 [/Script/UnrealTournament.UTLobbyBeaconClient]
 BeaconConnectionInitialTimeout=50.0
 BeaconConnectionTimeout=45.0
+
+[OnlineSubsystemMcp.OnlineIdentityMcp]
+bShouldReconnectXmpp=true
+RefreshTokenTheshold=7200
