Added configurable options to CTF round game for asymmetric victory conditions, whether lives per round is team wide or per player, whether players carry own or enemy flags, and whether flags can be returned by touching them.
[CL 2884099 by Steve Polge in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -275,6 +275,7 @@ bCustomWeaponCrosshairs=True
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Spectator"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTCTFScoreboard"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Intermission"
++RequiredHudWidgetClasses="/Script/UnrealTournament.UTHudWidget_LivesRemaining"
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 +DirectoriesToAlwaysCook=(Path="RestrictedAssets/Audio/AnnouncerReward")
