--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -381,4 +381,4 @@ MenuMusicAssetName=/Game/RestrictedAssets/Audio/Music/Music_UTMenu_Classic.Music
 bTestDailyChallenges=false
 
 [/Script/UnrealTournament.UTPlaylistManager]
-+Playlist=(PlaylistId=0,MaxTeamCount=2,MaxTeamSize=3,MaxPartySize=3,GameMode="TEAMSHOWDOWN",MapNames=("/Game/RestrictedAssets/Maps/DM-Chill","/Game/RestrictedAssets/Maps/WIP/DM-Focus","/Game/RestrictedAssets/Maps/WIP/DM-Temple","/Game/RestrictedAssets/Maps/WIP/DM-Cannon"))
++Playlist=(PlaylistId=0,MaxTeamCount=2,MaxTeamSize=3,MaxPartySize=3,GameMode="TEAMSHOWDOWN",TeamEloRating="RankedShowdownSkillRating",MapNames=("/Game/RestrictedAssets/Maps/DM-Chill","/Game/RestrictedAssets/Maps/WIP/DM-Focus","/Game/RestrictedAssets/Maps/WIP/DM-Temple","/Game/RestrictedAssets/Maps/WIP/DM-Cannon"))
