Sharpen on in editor
[CL 2890636 by Peter Knepley in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultEngine.ini
+++ b/UnrealTournament/Config/DefaultEngine.ini
@@ -110,6 +110,7 @@ BoostPlayerTextures=1.0
 [SystemSettingsEditor]
 r.RHICmdBypass=1
 r.PostProcessAAQuality=4
+r.Tonemapper.Sharpen=1
 
 [/Script/Engine.RecastNavMesh]
 AgentRadius=46.f
