chill in more maplists.
[CL 2891063 by Steve Polge in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -96,6 +96,7 @@ InactivePlayerStateLifeSpan=1200
 
 [/Script/UnrealTournament.UTDuelGame]
 bLobbyAllowJoinInProgress=false
++MapRotation=/Game/RestrictedAssets/Maps/DM-Chill
 +MapRotation=/Game/RestrictedAssets/Maps/WIP/DM-Solo
 +MapRotation=/Game/RestrictedAssets/Maps/WIP/DM-ASDF
 +MapRotation=/Game/RestrictedAssets/Maps/WIP/DM-DeckTest
@@ -104,6 +105,7 @@ bLobbyAllowJoinInProgress=false
 [/Script/UnrealTournament.UTShowdownGame]
 GoalScore=5
 TimeLimit=2
++MapRotation=/Game/RestrictedAssets/Maps/DM-Chill
 +MapRotation=/Game/RestrictedAssets/Maps/WIP/DM-Solo
 +MapRotation=/Game/RestrictedAssets/Maps/WIP/DM-ASDF
 +MapRotation=/Game/RestrictedAssets/Maps/WIP/DM-DeckTest
