--- a/UnrealTournament/Config/DefaultEngine.ini
+++ b/UnrealTournament/Config/DefaultEngine.ini
@@ -176,6 +176,8 @@ LogHttpReplay=Warning
 LogGameStats=Warning
 LogDemo=Warning
 LogAIModule=Warning
+LogRep=Warning
+LogLinux=Warning
 
 [/Script/UnrealTournament.UTLocalPlayer]
 bNoMidGameMenu=false
