Gauntlet prototype WIP Loadout Spawn Packs WIP Quick Stats Hud Widget WIP Some hud widget changes Added SpawnPacks via the loadout system Hooked up WIP UI for selecting your spawn pack.  VERY VERY WIP/HACKY HUDWidget DrawText now supports a background color Added a repnotify for the team on UTCarriedObject and made ChangeState virtual Made UTPlayerController:FixedupKeyname public
[CL 2901186 by Joe Wilcox in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultEngine.ini
+++ b/UnrealTournament/Config/DefaultEngine.ini
@@ -178,6 +178,7 @@ LogDemo=Warning
 LogAIModule=Warning
 LogRep=Warning
 LogLinux=Warning
+UT=VeryVerbose
 
 [/Script/UnrealTournament.UTLocalPlayer]
 bNoMidGameMenu=false
