Forward merge EMaxConcurrentResolutionRule::StopQuietest rename to get bugs out early
[CL 2901656 by Peter Knepley in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultEngine.ini
+++ b/UnrealTournament/Config/DefaultEngine.ini
@@ -55,6 +55,8 @@ ConsoleClassName=/Script/UnrealTournament.UTConsole
 +TaggedPropertyRedirects=(ClassName="UTHat",OldPropertyName="HatName",NewPropertyName="CosmeticName")
 +TaggedPropertyRedirects=(ClassName="UTHat",OldPropertyName="HatWearer",NewPropertyName="CosmeticWearer")
 
++EnumRedirects=(EnumName="EMaxConcurrentResolutionRule",OldEnumEntry="StopQuietist",NewEnumEntry="StopQuietest")
+
 +K2FieldRedirects=(OldFieldName="UTGameplayStatics.SaveConfig",NewFieldName="UTGameplayStatics.K2_SaveConfig")
 
 GameEngine=/Script/UnrealTournament.UTGameEngine
