--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -21,6 +21,7 @@ ServerDescription="Where Frags Happen"
 +DefaultMapPrefixes=(Prefix="CTF-",GameMode="/Script/UnrealTournament.UTCTFGameMode")
 +DefaultMapPrefixes=(Prefix="LBY-",GameMode="/Script/UnrealTournament.UTLobbyGameMode")
 +DefaultMapPrefixes=(Prefix="UT-Entry",GameMode="/Script/UnrealTournament.UTMenuGameMode")
++DefaultMapPrefixes=(Prefix="GAU-",GameMode="/Script/UnrealTournament.UTGauntletGame")
 
 [/Script/UnrealTournament.UTGameMode]
 GoalScore=0
@@ -92,6 +93,7 @@ InactivePlayerStateLifeSpan=1200
 +GameModeClassAliases=(ShortName="LOBBY",GameClassName="/Script/UnrealTournament.UTLobbyGameMode")
 +GameModeClassAliases=(ShortName="Sample",GameClassName="/SampleGameMode/BP_SampleGameMode.BP_SampleGameMode_C")
 +GameModeClassAliases=(ShortName="TimeDemo",GameClassName="/Game/RestrictedAssets/Blueprints/TimeDemoGameMode.TimeDemoGameMode_C")
++GameModeClassAliases=(ShortName="Gauntlet",GameClassName="/Script/UnrealTournament.UTGauntletGame")
 +GameModeClassAliases=(ShortName="EMPTY",GameClassName="/Script/UnrealTournament.UTEmptyServerGameMode")
 
 [/Script/UnrealTournament.UTDuelGame]
@@ -384,3 +386,46 @@ bTestDailyChallenges=false
 
 [/Script/UnrealTournament.UTPlaylistManager]
 +Playlist=(PlaylistId=0,MaxTeamCount=2,MaxTeamSize=3,MaxPartySize=3,GameMode="TEAMSHOWDOWN",TeamEloRating="RankedShowdownSkillRating",MapNames=("/Game/RestrictedAssets/Maps/DM-Chill","/Game/RestrictedAssets/Maps/WIP/DM-Focus","/Game/RestrictedAssets/Maps/WIP/DM-Temple","/Game/RestrictedAssets/Maps/WIP/DM-Cannon"))
+
+[/Script/UnrealTournament.UTGauntletGame]
++AvailableLoadout=(ItemTag="ImpactHammer",ItemClassStringRef="/Game/RestrictedAssets/Weapons/ImpactHammer/BP_ImpactHammer.BP_ImpactHammer_C", RoundMask=255)
++AvailableLoadout=(ItemTag="Enforcer",ItemClassStringRef="/Game/RestrictedAssets/Weapons/Enforcer/Enforcer.Enforcer_C", RoundMask=255)
++AvailableLoadout=(ItemTag="LinkGun",ItemClassStringRef="/Game/RestrictedAssets/Weapons/LinkGun/BP_LinkGun.BP_LinkGun_C", RoundMask=255)
++AvailableLoadout=(ItemTag="MiniGun",ItemClassStringRef="/Game/RestrictedAssets/Weapons/Minigun/BP_Minigun.BP_Minigun_C", RoundMask=255)
++AvailableLoadout=(ItemTag="BioRifle",ItemClassStringRef="/Game/RestrictedAssets/Weapons/BioRifle/BP_BioLauncher.BP_BioLauncher_C", RoundMask=255)
++AvailableLoadout=(ItemTag="FlakCannon",ItemClassStringRef="/Game/RestrictedAssets/Weapons/Flak/BP_FlakCannon.BP_FlakCannon_C", RoundMask=255)
++AvailableLoadout=(ItemTag="ShockRifle",ItemClassStringRef="/Game/RestrictedAssets/Weapons/ShockRifle/ShockRifle.ShockRifle_C", RoundMask=255)
++AvailableLoadout=(ItemTag="RocketLauncher",ItemClassStringRef="/Game/RestrictedAssets/Weapons/RocketLauncher/BP_RocketLauncher.BP_RocketLauncher_C", RoundMask=255)
++AvailableLoadout=(ItemTag="SniperRifle",ItemClassStringRef="/Game/RestrictedAssets/Weapons/Sniper/BP_Sniper.BP_Sniper_C", RoundMask=255)
++AvailableLoadout=(ItemTag="Redeemer",ItemClassStringRef="/Game/RestrictedAssets/Weapons/Redeemer/BP_Redeemer.BP_Redeemer_C", RoundMask=255)
++AvailableLoadout=(ItemTag="Translocator",ItemClassStringRef="/Game/RestrictedAssets/Weapons/Translocator/BP_Translocator.BP_Translocator_C", RoundMask=255)
++AvailableLoadout=(ItemTag="ArmorChest",ItemClassStringRef="/Game/RestrictedAssets/Pickups/Armor/Armor_Chest.Armor_Chest_C", RoundMask=255)
++AvailableLoadout=(ItemTag="ArmorHelmet",ItemClassStringRef="/Game/RestrictedAssets/Pickups/Armor/Armor_Helmet.Armor_Helmet_C", RoundMask=255)
++AvailableLoadout=(ItemTag="ArmorShieldBelt",ItemClassStringRef="/Game/RestrictedAssets/Pickups/Armor/Armor_ShieldBelt.Armor_ShieldBelt_C", RoundMask=255)
++AvailableLoadout=(ItemTag="ArmorThighpads",ItemClassStringRef="/Game/RestrictedAssets/Pickups/Armor/Armor_ThighPads.Armor_ThighPads_C", RoundMask=255)
++AvailableLoadout=(ItemTag="JumpBoots",ItemClassStringRef="/Game/RestrictedAssets/Pickups/Powerups/BP_JumpBoots.BP_JumpBoots_C", RoundMask=255)
+
++AvailableLoadoutPacks=(PackInfo=(PackTag="Solid",PackTitle="Solid"),ItemsInPack=("Translocator","ImpactHammer","ShockRifle","FlakCannon","ArmorChest"))
++AvailableLoadoutPacks=(PackInfo=(PackTag="Quick",PackTitle="Quick"),ItemsInPack=("Translocator","ImpactHammer","BioRifle","LinkGun","JumpBoots"))
++AvailableLoadoutPacks=(PackInfo=(PackTag="Brutal",PackTitle="Brutal"),ItemsInPack=("Translocator","ImpactHammer","MiniGun","RocketLauncher","ArmorShieldBelt"))
+
+
+[/Script/UnrealTournament.UTHUD_Gauntlet]
+!RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_Paperdoll.bpHW_Paperdoll_C"
++RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_WeaponInfo.bpHW_WeaponInfo_C"
++RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_TeamGameClock.bpHW_TeamGameClock_C"
++RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_WeaponBar.bpHW_WeaponBar_C"
++RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_Powerups.bpHW_Powerups_C"
++RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_CTFFlagStatus.bpHW_CTFFlagStatus_C"
++RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_WeaponCrosshair"
+;+RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_ReplayTimeSlider"
++RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_DeathMessages"
++RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_PickupMessage"
++RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_ConsoleMessages"
++RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_GameMessages"
++RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpWH_KillIconMessages.bpWH_KillIconMessages_C"
++RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Spectator"
++RequiredHudWidgetClasses="/Script/UnrealTournament.UTCTFScoreboard"
++RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Intermission"
++RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_TeamLives.bpHW_TeamLives_C"
++RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_QuickStats.bpHW_QuickStats_C"
