--- a/UnrealTournament/Config/DefaultEngine.ini
+++ b/UnrealTournament/Config/DefaultEngine.ini
@@ -55,7 +55,7 @@ ConsoleClassName=/Script/UnrealTournament.UTConsole
 +TaggedPropertyRedirects=(ClassName="UTHat",OldPropertyName="HatName",NewPropertyName="CosmeticName")
 +TaggedPropertyRedirects=(ClassName="UTHat",OldPropertyName="HatWearer",NewPropertyName="CosmeticWearer")
 
-+EnumRedirects=(EnumName="EMaxConcurrentResolutionRule",OldEnumEntry="StopQuietist",NewEnumEntry="StopQuietest")
++EnumRedirects=(EnumName="EMaxConcurrentResolutionRule",OldEnumEntry="EMaxConcurrentResolutionRule::StopQuietist",NewEnumEntry="EMaxConcurrentResolutionRule::StopQuietest")
 
 +K2FieldRedirects=(OldFieldName="UTGameplayStatics.SaveConfig",NewFieldName="UTGameplayStatics.K2_SaveConfig")
 
