--- a/UnrealTournament/Config/DefaultInput.ini
+++ b/UnrealTournament/Config/DefaultInput.ini
@@ -159,7 +159,7 @@ bUseMouseForTouch=False
 ;+SpectatorBinds=(KeyName=F2,Command="DemoSeek -5")
 ;+SpectatorBinds=(KeyName=F3,Command="DemoSeek 10")
 ;+SpectatorBinds=(KeyName=F4,Command="DemoGoToLive")
-;+SpectatorBinds=(KeyName=F5,Command="DemoPause")
+;+SpectatorBinds=(KeyName=F5,Command="UTDemoPause")
 ;+SpectatorBinds=(KeyName=F7,Command="DemoTimeDilation -.1")
 ;+SpectatorBinds=(KeyName=F8,Command="DemoTimeDilation .1")
 +SpectatorBinds=(KeyName=F12,Command="ToggleReplayWindow")
