--- a/UnrealTournament/Config/DefaultEngine.ini
+++ b/UnrealTournament/Config/DefaultEngine.ini
@@ -180,7 +180,7 @@ LogDemo=Warning
 LogAIModule=Warning
 LogRep=Warning
 LogLinux=Warning
-
+LogSpawn=Warning
 
 [/Script/UnrealTournament.UTLocalPlayer]
 bNoMidGameMenu=false
