Gauntlet WIP Using DAM as a better test map WIP weapon/carried object weights (VERY WIP) Added some additional HUD elements Added a flag carrier indicator to quick stats New Bins
[CL 2905318 by Joe Wilcox in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -416,7 +416,6 @@ bTestDailyChallenges=false
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_TeamGameClock.bpHW_TeamGameClock_C"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_WeaponBar.bpHW_WeaponBar_C"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_Powerups.bpHW_Powerups_C"
-+RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_CTFFlagStatus.bpHW_CTFFlagStatus_C"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_WeaponCrosshair"
 ;+RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_ReplayTimeSlider"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_DeathMessages"
@@ -429,3 +428,4 @@ bTestDailyChallenges=false
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Intermission"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_TeamLives.bpHW_TeamLives_C"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_QuickStats.bpHW_QuickStats_C"
++RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_GauntletStatus.bpHW_GauntletStatus_C"
