Added WIP QuickStats hud widget to all game modes.
[CL 2905968 by Joe Wilcox in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -196,6 +196,7 @@ bCustomWeaponCrosshairs=True
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpWH_KillIconMessages.bpWH_KillIconMessages_C"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Spectator"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTScoreboard"
++RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_QuickStats.bpHW_QuickStats_C"
 
 [/Game/RestrictedAssets/Tutorials/UTHUD_Tutorial.UTHUD_Tutorial_C]
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_Paperdoll.bpHW_Paperdoll_C"
@@ -226,6 +227,7 @@ bCustomWeaponCrosshairs=True
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpWH_KillIconMessages.bpWH_KillIconMessages_C"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Spectator"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTTeamScoreboard"
++RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_QuickStats.bpHW_QuickStats_C"
 
 [/Script/UnrealTournament.UTHUD_Duel]
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_Paperdoll.bpHW_Paperdoll_C"
@@ -244,6 +246,7 @@ bCustomWeaponCrosshairs=True
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpWH_KillIconMessages.bpWH_KillIconMessages_C"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Spectator"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTDuelScoreboard"
++RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_QuickStats.bpHW_QuickStats_C"
 
 [/Script/UnrealTournament.UTHUD_Showdown]
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTShowdownScoreboard"
@@ -261,6 +264,7 @@ bCustomWeaponCrosshairs=True
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_GameMessages"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpWH_KillIconMessages.bpWH_KillIconMessages_C"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_SpectatorShowdown"
++RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_QuickStats.bpHW_QuickStats_C"
 
 [/Script/UnrealTournament.UTHUD_CTF]
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_Paperdoll.bpHW_Paperdoll_C"
@@ -280,6 +284,7 @@ bCustomWeaponCrosshairs=True
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTCTFScoreboard"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Intermission"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHudWidget_LivesRemaining"
++RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_QuickStats.bpHW_QuickStats_C"
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 +DirectoriesToAlwaysCook=(Path="RestrictedAssets/Audio/AnnouncerReward")
@@ -411,7 +416,7 @@ bTestDailyChallenges=false
 
 
 [/Script/UnrealTournament.UTHUD_Gauntlet]
-!RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_Paperdoll.bpHW_Paperdoll_C"
++RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_Paperdoll.bpHW_Paperdoll_C"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_WeaponInfo.bpHW_WeaponInfo_C"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_TeamGameClock.bpHW_TeamGameClock_C"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_WeaponBar.bpHW_WeaponBar_C"
