adding maps too cook
[CL 2908564 by Robert Estep in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultEditor.ini
+++ b/UnrealTournament/Config/DefaultEditor.ini
@@ -45,6 +45,7 @@ SimpleMapName=/Game/RestrictedAssets/Maps/Example_Map
 +Map=/Game/RestrictedAssets/Tutorials/TUT-PickupTraining
 +Map=/Game/EpicInternal/Lea/DM-Lea
 +Map=/Game/EpicInternal/Pistola/CTF-Pistola
++Map=/Game/EpicInternal/SR/Dm-Tuba_Vis_SR_RK
 
 [UI]
 ;+ContentDirectories=/Game/RestrictedAssets/UI
