Fix plugins causing warnings from RattleSN4K3
[CL 2908631 by Peter Knepley in UT-Clean branch]

--- a/UnrealTournament/Plugins/CustomBot/CustomBot.uplugin
+++ b/UnrealTournament/Plugins/CustomBot/CustomBot.uplugin
@@ -10,7 +10,7 @@
 	"Description" : "Code additions required to be able to created custom-logic bots",
 	"Category" : "UnrealTournament.Expansion",
 	"EnabledByDefault" : false,
-    "CanContainContent" : true,
+    "CanContainContent" : false,
 
 	"Modules" :
 	[
