--- a/UnrealTournament/Plugins/WebMRecord/WebMRecord.uplugin
+++ b/UnrealTournament/Plugins/WebMRecord/WebMRecord.uplugin
@@ -10,7 +10,7 @@
 	"Description" : "Record in-game video to a WebM",
 	"Category" : "UnrealTournament.Mod",
 	"EnabledByDefault" : true,
-	"CanContainContent" : true,
+	"CanContainContent" : false,
 	
 	"Modules" :
 	[
