Playerstart actor factory now always makes UT Playerstart
[CL 2913136 by Peter Knepley in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultEditor.ini
+++ b/UnrealTournament/Config/DefaultEditor.ini
@@ -56,3 +56,6 @@ UTWikiURL="http://wiki.unrealengine.com/Category:Unreal_Tournament"
 UTURL="http://UnrealTournament.com"
 FacebookURL="http://www.facebook.com/UnrealTournament"
 UTForumsURL="http://forums.unrealtournament.com"
+
+[/Script/UnrealEd.ActorFactoryPlayerStart]
+NewActorClassName=UnrealTournament.UTPlayerStart
