Hack ranked playlist to be 2v2 with 1 goal score for easy QA
[CL 2913809 by Peter Knepley in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -390,7 +390,7 @@ MenuMusicAssetName=/Game/RestrictedAssets/Audio/Music/Music_UTMenu_Classic.Music
 bTestDailyChallenges=false
 
 [/Script/UnrealTournament.UTPlaylistManager]
-+Playlist=(PlaylistId=0,MaxTeamCount=2,MaxTeamSize=3,MaxPartySize=3,GameMode="TEAMSHOWDOWN",TeamEloRating="RankedShowdownSkillRating",MapNames=("/Game/RestrictedAssets/Maps/DM-Chill","/Game/RestrictedAssets/Maps/WIP/DM-Focus","/Game/RestrictedAssets/Maps/WIP/DM-Temple","/Game/RestrictedAssets/Maps/WIP/DM-Cannon"))
++Playlist=(PlaylistId=0,MaxTeamCount=2,MaxTeamSize=2,MaxPartySize=2,ExtraCommandline="?GoalScore=1",GameMode="TEAMSHOWDOWN",TeamEloRating="RankedShowdownSkillRating",MapNames=("/Game/RestrictedAssets/Maps/DM-Chill","/Game/RestrictedAssets/Maps/WIP/DM-Focus","/Game/RestrictedAssets/Maps/WIP/DM-Temple","/Game/RestrictedAssets/Maps/WIP/DM-Cannon"))
 
 [/Script/UnrealTournament.UTGauntletGame]
 +AvailableLoadout=(ItemTag="ImpactHammer",ItemClassStringRef="/Game/RestrictedAssets/Weapons/ImpactHammer/BP_ImpactHammer.BP_ImpactHammer_C", RoundMask=255,InitialCost=0)
