--- a/UnrealTournament/Config/DefaultEditor.ini
+++ b/UnrealTournament/Config/DefaultEditor.ini
@@ -32,6 +32,7 @@ SimpleMapName=/Game/RestrictedAssets/Maps/Example_Map
 +Map=/Game/RestrictedAssets/Maps/WIP/DM-Cannon
 +Map=/Game/RestrictedAssets/Maps/WIP/DM-Tuba
 +Map=/Game/RestrictedAssets/Maps/DM-Chill
++Map=/Game/RestrictedAssets/Maps/DM-BioTower
 +Map=/Game/RestrictedAssets/Maps/WIP/DM-Vortex
 +Map=/Game/RestrictedAssets/Maps/WIP/DM-Morbiastest
 +Map=/Game/RestrictedAssets/Maps/WIP/DM-Solo
