Added round time limit to RCTF
[CL 2915492 by Steve Polge in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -35,6 +35,9 @@ MinTimeMargin=-0.25
 TimeMarginSlack=0.1
 MainScoreboardDisplayTime=5.0
 
+[/Script/UnrealTournament.UTCTFRoundGame]
+TimeLimit=5
+
 [/Script/UnrealTournament.UTBotConfig]
 +BotCharacters=(PlayerName="Malcolm",Tactics=0.5,MapAwareness=0.7)
 +BotCharacters=(PlayerName="Lauren",Aggressiveness=0.3,Alertness=0.2,MapAwareness=0.25)
