--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -232,6 +232,9 @@ bCustomWeaponCrosshairs=True
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTTeamScoreboard"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_QuickStats.bpHW_QuickStats_C"
 
+[/Game/RestrictedAssets/Proto/UITest/UTHUD_TeamDM_UITest.UTHUD_TeamDM_UITest_C]
++RequiredHudWidgetClasses="/Game/RestrictedAssets/Proto/UITest/bpHW_QuickStats_UITest.bpHW_QuickStats_UITest_C"
+
 [/Script/UnrealTournament.UTHUD_Duel]
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_Paperdoll.bpHW_Paperdoll_C"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_WeaponInfo.bpHW_WeaponInfo_C"
