--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -52,6 +52,7 @@ TimeLimit=5
 +MapRotation=/Game/RestrictedAssets/Maps/DM-Chill
 +MapRotation=/Game/RestrictedAssets/Maps/DM-Outpost23
 +MapRotation=/Game/RestrictedAssets/Maps/WIP/DM-Sand
++MapRotation=/Game/RestrictedAssets/Maps/DM-BioTower
 +MapRotation=/Game/RestrictedAssets/Maps/WIP/DM-RGB
 +MapRotation=/Game/RestrictedAssets/Maps/WIP/DM-Solo
 +MapRotation=/Game/RestrictedAssets/Maps/WIP/DM-Temple
