Removed Gauntlet from the UI since it's very early WIP Added a default map prefix and default map rotation
[CL 2924403 by Joe Wilcox in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -426,6 +426,8 @@ bTestDailyChallenges=false
 +AvailableLoadoutPacks=(PackInfo=(PackTag="Brutal",PackTitle="Brutal"),SpawnHealthModifier=100,ItemsInPack=("ImpactHammer","MiniGun","RocketLauncher","ArmorShieldBelt"))
 +AvailableLoadoutPacks=(PackInfo=(PackTag="Deadshot",PackTitle="Deadshot"),SpawnHealthModifier=-25,ItemsInPack=("Translocator","ImpactHammer","SniperRifle","Enforcer"))
 
++MapRotation=/Game/RestrictedAssets/Maps/GAU-TitanPassShell
+
 
 [/Script/UnrealTournament.UTHUD_Gauntlet]
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_Paperdoll.bpHW_Paperdoll_C"
