#codereview steve.polge Trying some changes on RCTF as RCTFT (UTCTFRoundGameTommy)
[CL 2925141 by Thomas Ross in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -91,6 +91,7 @@ InactivePlayerStateLifeSpan=1200
 +GameModeClassAliases=(ShortName="TDM",GameClassName="/Script/UnrealTournament.UTTeamDMGameMode")
 +GameModeClassAliases=(ShortName="CTF",GameClassName="/Script/UnrealTournament.UTCTFGameMode")
 +GameModeClassAliases=(ShortName="RCTF",GameClassName="/Script/UnrealTournament.UTCTFRoundGame")
++GameModeClassAliases=(ShortName="RCTFT",GameClassName="/Script/UnrealTournament.UTCTFRoundGameTommy")
 +GameModeClassAliases=(ShortName="DUEL",GameClassName="/Script/UnrealTournament.UTDuelGame")
 +GameModeClassAliases=(ShortName="SHOWDOWN",GameClassName="/Script/UnrealTournament.UTShowdownGame")
 +GameModeClassAliases=(ShortName="TEAMSHOWDOWN",GameClassName="/Script/UnrealTournament.UTTeamShowdownGame")
